# musicmoneyai

./: README.md
music-money-main/app/: layout.tsx
music-money-main/app/about/: page.tsx
music-money-main/app/auth/signin/: page.tsx
music-money-main/app/auth/signup/: page.tsx
music-money-main/types/: item.d.ts
rishicreateprotocol-main/: Dockerfile  README.md  entrypoint.sh  pyproject.toml
rishicreateprotocol-main/rishi_api/: cli.py  constants.py  database.py  main.py  models.py  sample.env  schema.py  utils.py
rishicreateprotocol-main/rishi_api/alembic/: env.py
rishicreateprotocol-main/rishi_api/alembic/versions/: de75afe06b27_initial_commit.py
